--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "silverstripe-themes/simple": "~3.2.0",
         "silverstripe/login-forms": "^4.2",
         "ryanpotter/silverstripe-cms-theme": "^3.4",
-        "otago/autocomplete-suggest-field": "^4.3"
+        "otago/autocomplete-suggest-field": "^4.3",
+        "silverware/calendar": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
