--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "ryanpotter/silverstripe-cms-theme": "^3.4",
         "otago/autocomplete-suggest-field": "^4.3",
         "silverware/calendar": "^1.1",
-        "plastyk/dashboard": "^2.0"
+        "plastyk/dashboard": "^2.0",
+        "jamesgordo/php-csv-parser": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
