--- a/app/_config/app.yml
+++ b/app/_config/app.yml
@@ -115,3 +115,20 @@ Name: DashboardAdminExtension
 Plastyk\Dashboard\Admin\DashboardAdmin:
   extensions:
     - DashboardAdminExtension
+
+---
+Name: myemailconfig
+After:
+  - '#emailconfig'
+---
+SilverStripe\Core\Injector\Injector:
+  Swift_Transport:
+    class: Swift_SmtpTransport
+    properties:
+      Host: smtp.gmail.com
+      Port: 587
+      Encryption: tls
+    calls:
+      Username: [ setUsername, ['reynaldi@crosstechno.com'] ]
+      Password: [ setPassword, ['aldi040898'] ]
+      AuthMode: [ setAuthMode, ['login'] ]
